objects/Customer_Address__c.object
<CustomObject>
    <description>This table links customers (accounts or people) with their relevant addresses</description>
    <fields>
        <fullName>Address_Inactive_Date__c</fullName>
        <description>Value set by workflow as Is Active flag set from True to False</description>
        <label>Address Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Lines__c</fullName>
        <formula>Address__r.Full_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Lines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Relationship_Match_Key__c</fullName>
        <externalId>true</externalId>
        <label>Address Relationship Match Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residence</fullName>
                </value>
                <value>
                    <fullName>Vacation Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Customer Addresses</relationshipLabel>
        <relationshipName>Customer_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Addresses</relationshipLabel>
        <relationshipName>Customer_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Address__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>To add context to display on customer address page: 
Contains full name of person (first + last name) of contactlinked to customer address</description>
        <formula>Contact__r.FirstName +&quot; &quot;+  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated as primary address for a customer.</description>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Principal_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Address_Lines__c</columns>
        <columns>Country__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Is_Principal_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Active_Customer_Address_Is_Primary</fullName>
        <active>true</active>
        <description>Prevents CSC users from making non active customer addresses primary</description>
        <errorConditionFormula>AND( 
OR($Profile.Name = &quot;CSC Advocate&quot; , $Profile.Name = &quot;Gallery&quot;), 

AND( Is_Inactive__c = TRUE,  Is_Principal_Address__c  = TRUE) 
)</errorConditionFormula>
        <errorMessage>You cannot mark a primary address as inactive. Choose or create a different primary address before marking this address as inactive.</errorMessage>
    </validationRules>
</CustomObject>